--- a/dom1.html
+++ b/dom1.html
@@ -10,6 +10,7 @@
     <p>
         <input type="button" onclick="tablePrint()" value="Print Table">
     </p>
+    <h5>my project</h5>
     <div id="pPrint">
     </div>
 </body>
