--- a/task04.html
+++ b/task04.html
@@ -76,7 +76,7 @@
     person.city=city;
     const email =document.getElementById("email").value;
     person.email=email;
-    const mobile =document.getElementById("mobile").value;
+    const mobile =Number(document.getElementById("mobile").value);
     person.mobile=mobile;
     console.log(person);
 }
